Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-123316

QQuickGeometry JointSemantic does not work with F32Type

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.7.1, 6.8.0 FF
    • 6.7
    • Quick: 3D
    • None
    • 1c981cd28 (dev), a694e036c (6.7), a6f23f405 (6.6)

    Description

      The documentation says: "The joint index data is typically I32Type. F32Type is also supported in order to enable functioning with APIs, such as OpenGL ES 2.0, that do not support integer vertex input attributes."

      What currently happens is that F32Type is only supported on platforms that don't support I32Type. Trying to use  F32Type with a modern API creates a model that is completely broken.

      This happens because the shader will always expect the index data to be integers if the platform supports it, regardless of the data type specified.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            inho Inho Lee
            tvete Paul Olav Tvete
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There is 1 open Gerrit change