Skinning: check the type of the joint indices

Joint indices are normally used as integer, Qt just defined it
as float only if the rhi backend could not support integer
attributes. However now it will be followed by the model
definition. Instead, if the rhi backend could not support it,
a warning will be generated.

Fixes: QTBUG-123316
Pick-to: 6.6 6.5
Change-Id: I6dc8b6ef863e8601d2874feaa05c21cb7b9e4a86
Reviewed-by: Jonas Karlsson <jonas.karlsson@qt.io>
(cherry picked from commit 1c981cd280189d099f01973900cec27f77921100)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>